# bci-project

./: .dockerignore  Dockerfile  README.md  app.py  digital_twin_bci.py  main.py  pyproject.toml  requirements.txt
liblsl-1.17.7-jammy_amd64/lib/: liblsl.so.1.17.7  liblsl.so.2
liblsl-1.17.7-jammy_amd64/lib/cmake/lsl/: LSLConfig-release.cmake  LSLConfigVersion.cmake
static/css/: index.css
static/js/: app.js
templates/: index.html
