[project]
name = "my-eduqual-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.2,<3",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.4",
    "requests>=2.32.5",
    "werkzeug<3",
]

[project.optional-dependencies]
hardware = [
    "brainflow>=5.20.0",
    "pylsl>=1.18.1",
    "pyserial>=3.5",
]
streaming = [
    "kafka-python>=2.3.0",
    "pyzmq>=25.1.0",
]
ml = [
    "h5py>=3.9.0",
    "mne>=1.4.2",
    "numpy>=2.2.6",
    "pandas>=2.0.3",
    "pyedflib>=0.1.30",
    "pywavelets>=1.4.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tensorflow>=2.20.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
]
privacy = [
    "cryptography>=46.0.4",
    "pycryptodome>=3.18.0",
]
visualization = [
    "matplotlib>=3.7.2",
    "plotly>=5.15.0",
    "seaborn>=0.12.2",
]
raspberry-pi = [
    "gpiozero>=1.6.2",
]
